--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: dev
+    active: mysql
 
 ---
 spring:
@@ -34,7 +34,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/asistencia_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
-    password: 
+    password: marte
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
